--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -51,15 +51,15 @@ body {
 }
 #directions {
   position: absolute;
-  bottom: 5px;
+  /* bottom: 5px; */
   background-color: transparent;
   display: none;
   flex-direction: column;
-  color: white;
+  color: black;
   font-size: 17px;
   font-weight: 300;
   font-family: 'Raleway', sans-serif;
-  text-shadow: 0px 0px 5px black;
+  text-shadow: 0px 0px 5px white;
 }
 #directions p {
   margin: 3px;
