--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -45,14 +45,14 @@ body {
   -webkit-box-align: center;
   -moz-box-align: center;
   box-align: center;
-  color: white;
+  color: #ffffff;
   text-align: center;
   cursor: pointer;
   margin: 7vh;
 }
 #initial-directions {
   width: 720px;
-  color: #ffffff;
+  color: white;
   font-size: 20px;
   font-weight: 300;
   font-family: 'Raleway', sans-serif;
@@ -66,11 +66,11 @@ body {
   background-color: transparent;
   display: none;
   flex-direction: column;
-  color: white;
+  color: black;
   font-size: 17px;
   font-weight: 300;
   font-family: 'Raleway', sans-serif;
-  text-shadow: 0px 0px 5px black;
+  text-shadow: 0px 0px 5px white;
 }
 #directions p {
   margin: 3px;
